; ModuleID = '/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-engine.c_memcache_stats.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/spell/extr_spell-engine.c_memcache_stats.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.connection = type { i32 }

@cmd_stats = common dso_local global i32 0, align 4
@stats_buff = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [6 x i8] c"END\0D\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @memcache_stats(%struct.connection* %0) #0 {
  %2 = alloca %struct.connection*, align 8
  %3 = alloca i32, align 4
  store %struct.connection* %0, %struct.connection** %2, align 8
  %4 = load i32, i32* @cmd_stats, align 4
  %5 = add nsw i32 %4, 1
  store i32 %5, i32* @cmd_stats, align 4
  %6 = load %struct.connection*, %struct.connection** %2, align 8
  %7 = call i32 @spell_prepare_stats(%struct.connection* %6)
  store i32 %7, i32* %3, align 4
  %8 = load %struct.connection*, %struct.connection** %2, align 8
  %9 = getelementptr inbounds %struct.connection, %struct.connection* %8, i32 0, i32 0
  %10 = load i8*, i8** @stats_buff, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call i32 @write_out(i32* %9, i8* %10, i32 %11)
  %13 = load %struct.connection*, %struct.connection** %2, align 8
  %14 = getelementptr inbounds %struct.connection, %struct.connection* %13, i32 0, i32 0
  %15 = call i32 @write_out(i32* %14, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 5)
  ret i32 0
}

declare dso_local i32 @spell_prepare_stats(%struct.connection*) #1

declare dso_local i32 @write_out(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
